--- a/drivers/video/display/screen/Kconfig
+++ b/drivers/video/display/screen/Kconfig
@@ -23,6 +23,8 @@ config LCD_RGB_TFT480800_25_E
 	  bool "RGB TFT480800_25_E(480X800)"
 config LCD_LS035Y8DX02A
 	  bool "RGB LS035Y8DX02A(480X800)"
+config LCD_CPTCLAA038LA31XE
+	  bool "RGB LCD_CPTCLAA038LA31XE(480X800)"	  
 config LCD_A060SE02
     bool "MCU A060SE02"
 config LCD_S1D13521
