rk29: update defconfig for RK29_JTAG

--- a/arch/arm/configs/rk29_FIH_defconfig
+++ b/arch/arm/configs/rk29_FIH_defconfig
@@ -236,6 +236,7 @@ CONFIG_DDR_SDRAM_FREQ=400
 #
 CONFIG_RK29_VPU=y
 # CONFIG_RK29_VPU_DEBUG is not set
+# CONFIG_RK29_JTAG is not set
 
 #
 # Processor Type
