--- a/arch/arm/configs/rk29_a22_defconfig
+++ b/arch/arm/configs/rk29_a22_defconfig
@@ -211,6 +211,7 @@ CONFIG_RK29_MEM_SIZE_M=512
 #
 CONFIG_RK29_VPU=y
 # CONFIG_RK29_VPU_DEBUG is not set
+# CONFIG_RK29_JTAG is not set
 
 #
 # Processor Type
