RK29MobileSDK:remove USBHost2.0 support, because of circuit error

--- a/arch/arm/configs/rk29_phonesdk_defconfig
+++ b/arch/arm/configs/rk29_phonesdk_defconfig
@@ -1313,6 +1313,7 @@ CONFIG_DISPLAY_SUPPORT=y
 # CONFIG_LCD_HSD100PXN is not set
 # CONFIG_LCD_B101AW06 is not set
 CONFIG_LCD_LS035Y8DX02A=y
+# CONFIG_LCD_CPTCLAA038LA31XE is not set
 # CONFIG_LCD_A060SE02 is not set
 # CONFIG_LCD_S1D13521 is not set
 # CONFIG_LCD_NT35582 is not set
@@ -1575,8 +1576,7 @@ CONFIG_USB_ANDROID_MASS_STORAGE=y
 # CONFIG_NOP_USB_XCEIV is not set
 CONFIG_USB11_HOST=y
 CONFIG_USB11_HOST_EN=y
-CONFIG_USB20_HOST=y
-CONFIG_USB20_HOST_EN=y
+# CONFIG_USB20_HOST is not set
 CONFIG_USB20_OTG=y
 # CONFIG_DWC_OTG_HOST_ONLY is not set
 CONFIG_DWC_OTG_DEVICE_ONLY=y
