--- a/arch/arm/configs/rk29_a22_defconfig
+++ b/arch/arm/configs/rk29_a22_defconfig
@@ -204,7 +204,32 @@ CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_MACH_RK29_MALATA is not set
 # CONFIG_MACH_RK29_PHONESDK is not set
 CONFIG_MACH_RK29_A22=y
+# CONFIG_DDR_TYPE_DDRII is not set
+CONFIG_DDR_TYPE_LPDDR=y
+# CONFIG_DDR_TYPE_DDR3_800D is not set
+# CONFIG_DDR_TYPE_DDR3_800E is not set
+# CONFIG_DDR_TYPE_DDR3_1066E is not set
+# CONFIG_DDR_TYPE_DDR3_1066F is not set
+# CONFIG_DDR_TYPE_DDR3_1066G is not set
+# CONFIG_DDR_TYPE_DDR3_1333F is not set
+# CONFIG_DDR_TYPE_DDR3_1333G is not set
+# CONFIG_DDR_TYPE_DDR3_1333H is not set
+# CONFIG_DDR_TYPE_DDR3_1333J is not set
+# CONFIG_DDR_TYPE_DDR3_1600G is not set
+# CONFIG_DDR_TYPE_DDR3_1600H is not set
+# CONFIG_DDR_TYPE_DDR3_1600J is not set
+# CONFIG_DDR_TYPE_DDR3_1600K is not set
+# CONFIG_DDR_TYPE_DDR3_1866J is not set
+# CONFIG_DDR_TYPE_DDR3_1866K is not set
+# CONFIG_DDR_TYPE_DDR3_1866L is not set
+# CONFIG_DDR_TYPE_DDR3_1866M is not set
+# CONFIG_DDR_TYPE_DDR3_2133K is not set
+# CONFIG_DDR_TYPE_DDR3_2133L is not set
+# CONFIG_DDR_TYPE_DDR3_2133M is not set
+# CONFIG_DDR_TYPE_DDR3_2133N is not set
+# CONFIG_DDR_TYPE_DDR3_DEFAULT is not set
 CONFIG_RK29_MEM_SIZE_M=512
+CONFIG_DDR_SDRAM_FREQ=192
 
 #
 # RK29 VPU (Video Processing Unit) support
@@ -618,6 +643,7 @@ CONFIG_MTK23D=y
 # CONFIG_EEPROM_LEGACY is not set
 # CONFIG_EEPROM_MAX6875 is not set
 # CONFIG_EEPROM_93CX6 is not set
+# CONFIG_RK29_SUPPORT_MODEM is not set
 CONFIG_RK29_GPS=y
 CONFIG_GPS_GNS7560=y
 
@@ -845,7 +871,7 @@ CONFIG_TOUCHSCREEN_ILI2102_IIC=y
 # CONFIG_TOUCHSCREEN_IT7260 is not set
 # CONFIG_TOUCHSCREEN_GT801_IIC is not set
 CONFIG_INPUT_MISC=y
-CONFIG_INPUT_LPSENSOR_ISL29028=y
+# CONFIG_INPUT_LPSENSOR_ISL29028 is not set
 # CONFIG_INPUT_LPSENSOR_CM3602 is not set
 # CONFIG_INPUT_ATI_REMOTE is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
@@ -857,8 +883,8 @@ CONFIG_INPUT_LPSENSOR_ISL29028=y
 # CONFIG_INPUT_UINPUT is not set
 # CONFIG_INPUT_GPIO is not set
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
-CONFIG_MAG_SENSORS=y
-# CONFIG_COMPASS_AK8975 is not set
+CONFIG_INPUT_WM831X_ON=y
+# CONFIG_MAG_SENSORS is not set
 # CONFIG_COMPASS_AK8973 is not set
 CONFIG_COMPASS_MMC328X=y
 CONFIG_G_SENSOR_DEVICE=y
@@ -993,6 +1019,7 @@ CONFIG_GPIOLIB=y
 # CONFIG_GPIO_MAX732X is not set
 # CONFIG_GPIO_PCA953X is not set
 # CONFIG_GPIO_PCF857X is not set
+CONFIG_GPIO_WM831X=y
 
 #
 # PCI GPIO expanders:
@@ -1019,6 +1046,8 @@ CONFIG_SPI_FPGA_GPIO_IRQ_NUM=16
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 # CONFIG_PDA_POWER is not set
+CONFIG_WM831X_BACKUP=y
+CONFIG_WM831X_POWER=y
 # CONFIG_BATTERY_DS2760 is not set
 # CONFIG_BATTERY_DS2782 is not set
 # CONFIG_BATTERY_BQ27x00 is not set
@@ -1039,7 +1068,7 @@ CONFIG_SSB_POSSIBLE=y
 #
 # Multifunction device drivers
 #
-# CONFIG_MFD_CORE is not set
+CONFIG_MFD_CORE=y
 # CONFIG_MFD_SM501 is not set
 # CONFIG_MFD_ASIC3 is not set
 # CONFIG_HTC_EGPIO is not set
@@ -1054,9 +1083,10 @@ CONFIG_SSB_POSSIBLE=y
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_WM8994 is not set
 # CONFIG_MFD_WM8400 is not set
+CONFIG_MFD_WM831X=y
 # CONFIG_MFD_WM831X_I2C is not set
-# CONFIG_MFD_WM831X_SPI is not set
-CONFIG_MFD_WM831X_SPI_A22=y
+CONFIG_MFD_WM831X_SPI=y
+# CONFIG_MFD_WM831X_SPI_A22 is not set
 # CONFIG_MFD_WM8350_I2C is not set
 # CONFIG_MFD_PCF50633 is not set
 # CONFIG_MFD_MC13783 is not set
@@ -1069,6 +1099,7 @@ CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_USERSPACE_CONSUMER is not set
 # CONFIG_REGULATOR_BQ24022 is not set
 # CONFIG_REGULATOR_MAX1586 is not set
+CONFIG_REGULATOR_WM831X=y
 # CONFIG_REGULATOR_LP3971 is not set
 # CONFIG_REGULATOR_TPS65023 is not set
 # CONFIG_REGULATOR_TPS6507X is not set
@@ -1260,7 +1291,7 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 # CONFIG_BACKLIGHT_RK29_BL is not set
-CONFIG_FIH_TOUCHKEY_LED=y
+# CONFIG_FIH_TOUCHKEY_LED is not set
 CONFIG_BACKLIGHT_AW9364=y
 
 #
@@ -1541,8 +1572,10 @@ CONFIG_USB_ANDROID_MASS_STORAGE=y
 #
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_NOP_USB_XCEIV is not set
-# CONFIG_USB11_HOST is not set
-# CONFIG_USB20_HOST is not set
+CONFIG_USB11_HOST=y
+CONFIG_USB11_HOST_EN=y
+CONFIG_USB20_HOST=y
+CONFIG_USB20_HOST_EN=y
 CONFIG_USB20_OTG=y
 # CONFIG_DWC_OTG_HOST_ONLY is not set
 CONFIG_DWC_OTG_DEVICE_ONLY=y
@@ -1647,6 +1680,7 @@ CONFIG_RTC_INTF_ALARM_DEV=y
 # CONFIG_RTC_DRV_M48T59 is not set
 # CONFIG_RTC_DRV_BQ4802 is not set
 # CONFIG_RTC_DRV_V3020 is not set
+CONFIG_RTC_DRV_WM831X=y
 
 #
 # on-CPU RTC drivers
