HHB add LCD ili9803 driver support

--- a/arch/arm/configs/rk29_a22_defconfig
+++ b/arch/arm/configs/rk29_a22_defconfig
@@ -1318,7 +1318,8 @@ CONFIG_DISPLAY_SUPPORT=y
 # CONFIG_LCD_NT35580 is not set
 # CONFIG_LCD_IPS1P5680_V1_E is not set
 # CONFIG_LCD_MCU_TFT480800_25_E is not set
-CONFIG_LCD_ILI9803_CPT4_3=y
+CONFIG_LCD_NT35510=y
+# CONFIG_LCD_ILI9803_CPT4_3 is not set
 # CONFIG_DEFAULT_OUT_HDMI is not set
 # CONFIG_LCD_AT070TNA2 is not set
 
