--- a/sound/soc/rk29/Kconfig
+++ b/sound/soc/rk29/Kconfig
@@ -56,6 +56,16 @@ config SND_RK29_SOC_alc5631
 	help
 	  Say Y if you want to add support for SoC audio on rockchip
 	  with the alc5631.
+
+config SND_RK29_SOC_RT5625
+	tristate "SoC I2S Audio support for rockchip - RT5625"
+	depends on SND_RK29_SOC && I2C_RK29
+	select SND_RK29_SOC_I2S
+	select SND_SOC_RT5625
+	help
+	  Say Y if you want to add support for SoC audio on rockchip
+	  with the RT5625.
+
 config SND_RK29_SOC_WM8994
 	tristate "SoC I2S Audio support for rockchip - WM8994"
 	depends on SND_RK29_SOC && I2C_RK29
@@ -74,7 +84,7 @@ config SND_RK29_SOC_RK1000
 	  Say Y if you want to add support for SoC audio on rockchip
 	  with the RK1000.	 
 	   
-if SND_RK29_SOC_WM8988 || SND_RK29_SOC_RK1000 || SND_RK29_SOC_WM8994 || SND_RK29_SOC_WM8900 || SND_RK29_SOC_alc5621 || SND_RK29_SOC_alc5631
+if SND_RK29_SOC_WM8988 || SND_RK29_SOC_RK1000 || SND_RK29_SOC_WM8994 || SND_RK29_SOC_WM8900 || SND_RK29_SOC_alc5621 || SND_RK29_SOC_alc5631 || SND_RK29_SOC_RT5625
 choice
   prompt "Set i2s type"
 	config SND_RK29_CODEC_SOC_MASTER
