--- a/drivers/usb/dwc_otg/Kconfig
+++ b/drivers/usb/dwc_otg/Kconfig
@@ -50,11 +50,30 @@ config DWC_OTG_DEVICE_ONLY
 	  USB2.0 OTG controller worked in device mode
      	  and device can connect to PC via USB cable.
 
+config DWC_OTG_BOTH_HOST_SLAVE
+	bool "BOTH HOST AND SLAVE"
+	depends on USB20_OTG && USB_GADGET && USB
+
+endchoice
+
+choice 
+	bool "    Controller default status"
+	depends on DWC_OTG_BOTH_HOST_SLAVE
+	default DWC_OTG_DEFAULT_ID
+
+config DWC_OTG_DEFAULT_ID
+	bool "depends on USB_ID"
+
+config DWC_OTG_DEFAULT_HOST
+	bool "HOST"
+
+config DWC_OTG_DEFAULT_DEVICE
+	bool "DEVICE"
 endchoice
 
 config DWC_CONN_EN
 	bool "---connect to PC when vbus detect"
-	depends on DWC_OTG_DEVICE_ONLY
+	depends on USB_GADGET
 	default y
 	help
 	  USB2.0 OTG controller always polling the USB vbus
@@ -63,7 +82,7 @@ config DWC_CONN_EN
 
 config USB20_OTG_EN
 	bool "---usb2.0 otg host controller enable"
-	depends on DWC_OTG_HOST_ONLY
+	depends on DWC_OTG_HOST_ONLY || DWC_OTG_BOTH_HOST_SLAVE
 	default y
 
 config DWC_OTG_DEBUG
