a22 defconfig: add compass akm8975

--- a/arch/arm/configs/rk29_a22_defconfig
+++ b/arch/arm/configs/rk29_a22_defconfig
@@ -869,7 +869,10 @@ CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_GPIO is not set
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 CONFIG_INPUT_WM831X_ON=y
-# CONFIG_MAG_SENSORS is not set
+CONFIG_MAG_SENSORS=y
+CONFIG_COMPASS_AK8975=y
+# CONFIG_COMPASS_AK8973 is not set
+# CONFIG_COMPASS_MMC328X is not set
 CONFIG_G_SENSOR_DEVICE=y
 # CONFIG_GS_MMA7660 is not set
 CONFIG_GS_MMA8452=y
