--- a/sound/soc/Kconfig
+++ b/sound/soc/Kconfig
@@ -57,6 +57,8 @@ source "sound/soc/s6000/Kconfig"
 source "sound/soc/sh/Kconfig"
 source "sound/soc/tegra/Kconfig"
 source "sound/soc/txx9/Kconfig"
+source "sound/soc/sun4i/Kconfig"
+
 
 # Supported codecs
 source "sound/soc/codecs/Kconfig"
