--- a/sound/soc/Kconfig
+++ b/sound/soc/Kconfig
@@ -59,7 +59,7 @@ source "sound/soc/tegra/Kconfig"
 source "sound/soc/txx9/Kconfig"
 source "sound/soc/sun4i/Kconfig"
 source "sound/soc/sun4i/hdmiaudio/Kconfig"
-
+source "sound/soc/sun4i/spdif/Kconfig"
 
 # Supported codecs
 source "sound/soc/codecs/Kconfig"
