--- a/sound/soc/Makefile
+++ b/sound/soc/Makefile
@@ -22,6 +22,6 @@ obj-$(CONFIG_SND_SOC)	+= tegra/
 obj-$(CONFIG_SND_SOC)	+= txx9/
 obj-$(CONFIG_SND_SOC)	+= sun4i/
 obj-$(CONFIG_SND_SOC)	+= sun4i/hdmiaudio/
-
+obj-$(CONFIG_SND_SOC)	+= sun4i/spdif/
 
 
