--- a/sound/soc/Kconfig
+++ b/sound/soc/Kconfig
@@ -60,6 +60,7 @@ source "sound/soc/txx9/Kconfig"
 source "sound/soc/sun4i/Kconfig"
 source "sound/soc/sun4i/hdmiaudio/Kconfig"
 source "sound/soc/sun4i/spdif/Kconfig"
+source "sound/soc/sun4i/i2s/Kconfig"
 
 # Supported codecs
 source "sound/soc/codecs/Kconfig"
