--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -36,3 +36,6 @@ obj-$(CONFIG_CHARGER_ISP1704)	+= isp1704_charger.o
 obj-$(CONFIG_CHARGER_MAX8903)	+= max8903_charger.o
 obj-$(CONFIG_CHARGER_TWL4030)	+= twl4030_charger.o
 obj-$(CONFIG_CHARGER_GPIO)	+= gpio-charger.o
+
+obj-$(CONFIG_AW_AXP) += axp_power/
+
