--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -603,6 +603,18 @@ config ARCH_TEGRA
 	  This enables support for NVIDIA Tegra based systems (Tegra APX,
 	  Tegra 6xx and Tegra 2 series).
 
+config ARCH_SUN3I
+	bool "Allwinner Ltd. sun3i family"
+	select CPU_ARM926T
+	select ARM_AMBA
+	select HAVE_CLK
+	select ARM_VIC
+	# select COMMON_CLKDEV
+	select ICST
+	select GENERIC_CLOCKEVENTS
+	help
+	  This enables support for ARM Ltd Versatile board.
+
 config ARCH_SUN4I
 	bool "AllWinner SUN4I Platform"
 	select CPU_V7
@@ -629,6 +641,9 @@ config ARCH_SUN5I
         help
           This enables support for Allwinner Technology Co., Ltd A12/A13 SoC based systems
 
+#if ARCH_SUN3I
+source "arch/arm/mach-sun3i/Kconfig"
+#endif
 #if ARCH_SUN4I
 #source "arch/arm/mach-sun4i/Kconfig"
 #endif
