net: sun3i: Add wemac driver from AllWinner's 2.6.36 tree

--- a/drivers/net/Kconfig
+++ b/drivers/net/Kconfig
@@ -3467,6 +3467,15 @@ config VMXNET3
 	  To compile this driver as a module, choose M here: the
 	  module will be called vmxnet3.
 
+config WEMAC_SUN3I
+	tristate "wemac support(sun3i)"
+	depends on ARCH_SUN3I
+	---help---
+	  Support for softwinner chipset.
+
+	  To compile this driver as a module, choose M here.  The module
+	  will be called wemac.
+
 config WEMAC_SUN4I
         tristate "wemac support(A1x)"
         depends on ARCH_SUN4I || ARCH_SUN5I
