net: fix WEMAC_SUN4I dependencies
This needs to select MII, otherwise the following happens

  drivers/built-in.o: In function `wemac_drv_resume':
  tree/drivers/net/sun4i/sun4i_wemac.c:1973: undefined reference to `mii_link_ok'
  drivers/built-in.o: In function `wemac_drv_suspend':
  tree/drivers/net/sun4i/sun4i_wemac.c:1953: undefined reference to `mii_link_ok'
  drivers/built-in.o: In function `wemac_nway_reset':
  tree/drivers/net/sun4i/sun4i_wemac.c:421: undefined reference to `mii_nway_restart'
  drivers/built-in.o: In function `wemac_set_settings':
  tree/drivers/net/sun4i/sun4i_wemac.c:415: undefined reference to `mii_ethtool_sset'
  drivers/built-in.o: In function `wemac_get_settings':
  tree/drivers/net/sun4i/sun4i_wemac.c:407: undefined reference to `mii_ethtool_gset'
  drivers/built-in.o: In function `wemac_ioctl':
  tree/drivers/net/sun4i/sun4i_wemac.c:374: undefined reference to `generic_mii_ioctl'
  drivers/built-in.o: In function `wemac_open':
  tree/drivers/net/sun4i/sun4i_wemac.c:1530: undefined reference to `mii_check_media'
  drivers/built-in.o: In function `wemac_get_link':
  tree/drivers/net/sun4i/sun4i_wemac.c:430: undefined reference to `mii_link_ok'
  drivers/built-in.o: In function `wemac_poll_work':
  tree/drivers/net/sun4i/sun4i_wemac.c:941: undefined reference to `mii_check_media'

--- a/drivers/net/Kconfig
+++ b/drivers/net/Kconfig
@@ -3470,6 +3470,7 @@ config VMXNET3
 config WEMAC_SUN4I
         tristate "wemac support(A1x)"
         depends on ARCH_SUN4I || ARCH_SUN5I
+        select MII
         ---help---
           Support for Softwinner chipset.
 
