wireless: sme: Disable WARN_ON for bcm4336
Add config `CFG80211_ALLOW_RECONNECT' and use it to quick fix
the compatibility issue between WEXT and bcm4336.

------------[ cut here ]------------
WARNING: CPU: 0 PID: 823 at net/wireless/sme.c:979 ...

--- a/arch/arm/configs/nanopi_defconfig
+++ b/arch/arm/configs/nanopi_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 4.1.0 Kernel Configuration
+# Linux/arm 4.1.2 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -889,6 +889,7 @@ CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 CONFIG_CFG80211_WEXT=y
 # CONFIG_LIB80211 is not set
+CONFIG_CFG80211_ALLOW_RECONNECT=y
 # CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
