usb: gadget: Add FriendlyARM Gadget

--- a/arch/arm/configs/nanopi_defconfig
+++ b/arch/arm/configs/nanopi_defconfig
@@ -2367,6 +2367,7 @@ CONFIG_USB_LIBCOMPOSITE=y
 CONFIG_USB_F_ACM=y
 CONFIG_USB_U_SERIAL=y
 CONFIG_USB_U_ETHER=y
+CONFIG_USB_F_SERIAL=y
 CONFIG_USB_F_ECM=y
 # CONFIG_USB_CONFIGFS is not set
 # CONFIG_USB_ZERO is not set
@@ -2379,7 +2380,8 @@ CONFIG_USB_F_ECM=y
 # CONFIG_USB_G_SERIAL is not set
 # CONFIG_USB_MIDI_GADGET is not set
 # CONFIG_USB_G_PRINTER is not set
-CONFIG_USB_CDC_COMPOSITE=y
+# CONFIG_USB_CDC_COMPOSITE is not set
+CONFIG_USB_G_FRIENDLYARM=y
 # CONFIG_USB_G_NOKIA is not set
 # CONFIG_USB_G_ACM_MS is not set
 # CONFIG_USB_G_MULTI is not set
