defconfig: Enable devtmpfs, autofs for Debian

--- a/arch/arm/configs/nanopi_defconfig
+++ b/arch/arm/configs/nanopi_defconfig
@@ -913,7 +913,8 @@ CONFIG_HAVE_BPF_JIT=y
 #
 CONFIG_UEVENT_HELPER=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
-# CONFIG_DEVTMPFS is not set
+CONFIG_DEVTMPFS=y
+# CONFIG_DEVTMPFS_MOUNT is not set
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
@@ -2703,7 +2704,7 @@ CONFIG_INOTIFY_USER=y
 CONFIG_FANOTIFY=y
 # CONFIG_QUOTA is not set
 # CONFIG_QUOTACTL is not set
-# CONFIG_AUTOFS4_FS is not set
+CONFIG_AUTOFS4_FS=y
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
 # CONFIG_OVERLAY_FS is not set
