lkl tools: Implement virtio-net using VDE.
This commit adds an new lkl_netdev implementation using the vdeplug2 library
as a backend. This allows LKL to interface to the Virtual Distributed Ethernet
userspace network implementation and act as a client in a VDE network.

The VDE support is disabled by default and can be enabled by setting "vde=y" for the
makefile, e.g.
    $ make vde=y

Signed-off-by: Thomas Liebetraut <thomas@tommie-lie.de>

--- a/tools/lkl/Makefile
+++ b/tools/lkl/Makefile
@@ -59,6 +59,12 @@ ifneq (,$(filter $(OUTPUT_FORMAT),elf64-x86-64 elf32-i386 elf64-x86-64-freebsd e
     LDFLAGS +=-L$(RTE_SDK)/$(RTE_TARGET)/lib
     LDFLAGS +=-Wl,--whole-archive -ldpdk -Wl,--no-whole-archive -lm -ldl
   endif
+  # Virtual Distributed Ethernet configuration
+  ifeq ($(vde),yes)
+    export CONFIG_AUTO_LKL_VIRTIO_NET_VDE=y
+    CFLAGS     += -DCONFIG_AUTO_LKL_VIRTIO_NET_VDE
+    LDLIBS     += $(shell pkg-config --libs vdeplug)
+  endif
 else ifneq (,$(filter $(OUTPUT_FORMAT),pe-i386))
   KOPT      = "KALLSYMS_EXTRA_PASS=1"
   LDLIBS   += -lws2_32
